# penaltymodel

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  README.rst  appveyor.yml  logging.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
ci_utils/: verify_penaltymodel_cache_version.py  verify_penaltymodel_maxgap_version.py  verify_penaltymodel_version.py
docs/: Makefile  api_ref.rst  cache_schema.rst  conf.py  database_schema.rst  glossary.rst  index.rst  installation.rst  ocean.rst  penaltymodel_code.rst  reference.rst  release_notes.rst  requirements.txt  sdk_index.rst  using_factories.rst
dwave_maxgap/: __init__.py  generation.py  interface.py  penalty_model.py  smt.py
dwave_maxgap/tests/: test_generation.py  test_interface.py  test_smt.py
penaltymodel/: __init__.py  cache.py  classes.py  database.py  decorators.py  exceptions.py  factories.py  generation.py  interface.py  lp.py  maxgap.py  mip.py  package_info.py  penaltymodel.py  plugins.py  serialization.py  typing.py  utils.py
penaltymodel/classes/: __init__.py  binary_quadratic_model.py  classes.py  penaltymodel.py  specification.py  vartypes.py
penaltymodel/core/: __init__.py  exceptions.py  interface.py  package_info.py
penaltymodel/tests/: test_classes.py  test_interface.py  test_penaltymodel.py  test_serialization.py
penaltymodel_cache/: .coveragerc  README.rst  __init__.py  cache_manager.py  database_directory.py  database_manager.py  interface.py  package_info.py  requirements.txt  schema.py  serialization.py  setup.py
penaltymodel_cache/docs/: conf.py  interface.rst
penaltymodel_cache/penaltymodel_cache/: database_manager.py  package_info.py
penaltymodel_cache/tests/: test_cache_manager.py  test_database_manager.py  test_interface.py  test_serialization.py  test_utilities.py
penaltymodel_core/: .coveragerc  README.rst  requirements.txt  setup.py
penaltymodel_core/docs/: conf.py
penaltymodel_core/penaltymodel/: __init__.py  cache.py  interface.py  lp.py  package_info.py  typing.py
penaltymodel_lp/: README.rst  lp_test.py  requirements.txt  setup.py  test_generation.py  test_interface.py
penaltymodel_maxgap/: .coveragerc  README.rst  generation.py  interface.py  package_info.py  requirements.txt  setup.py  smt.py
penaltymodel_mip/: README.rst  requirements.txt  setup.py
penaltymodel_ortools/: penaltymodel_ortools.py  requirements.txt
penaltymodel_toy/: lp_test.py  temp_test.py
tests/: requirements.txt  test_cache.py  test_database.py  test_generation.py  test_int_penaltymodel_ecosystem.py  test_interface.py  test_interface_deprecated.py  test_penaltymodel.py  test_specification.py  test_utils.py
(+64 files in other folders)
