[metadata]
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
name = penaltymodel
project_urls =
    Changes = https://github.com/dwavesystems/penaltymodel/releases
    Documentation = https://docs.ocean.dwavesys.com
    Souce Code = https://github.com/dwavesystems/penaltymodel
url = https://github.com/dwavesystems/penaltymodel
version = attr: penaltymodel.__version__

# keep description, author and author email up to date with penaltymodel.core.package_info
author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
description = Package for creating penalty models.

[options]
install_requires =
    dimod>=0.10.9
    homebase>=1.0.1
    networkx>=2.4.0
    numpy>=1.20.0
    scipy>=1.6.0
packages = 
    penaltymodel
    penaltymodel.core
    penaltymodel.core.classes
python_requires = >=3.8

[pycodestyle]
max-line-length = 100
